release 1.4 (08-2010)
- Fixed issue 571
  https://jersey.dev.java.net/issues/show_bug.cgi?id=571
  User defined providers (MessageBodyReaders and Writers) must have higher
  priority than Jersey provided ones (client & server side).
- When ServletContainer.FEATURE_FILTER_FORWARD_ON_404 is enabled
  and the status code is 404 call HttpServletResponse.setStatus otherwise
  call HttpServletResponse.sendError.
- Fixed issue 578
  https://jersey.dev.java.net/issues/show_bug.cgi?id=578
  The async client, when no HTTP async implementation is utilized, uses
  ExecutorService to execute the request/response task.
  The default implementation is Executors.newCachedThreadPool() and the
  implementation can be set on the Client.
- Fixed issue 577
  https://jersey.dev.java.net/issues/show_bug.cgi?id=577
  When a client sends an empty request to a resource method that consumes
  JAXB/JSON the natural and mapped conventions produce inconsistent results and
  should return a 400 error.
- Fixed issue 546
  https://jersey.dev.java.net/issues/show_bug.cgi?id=546
  Validating default values with @DefaultValue of an @*Param at initialization
  time to produce on errors on deployment can be avoided if the StringReader
  is annotated with @StringReader.@ValidateDefaultValue(false). In such cases
  if the default value is incorrect it will result in a runtime error.
- Fixed issue 552
  https://jersey.dev.java.net/issues/show_bug.cgi?id=552
  Support null key values (as documented) for KeyComparatorHashMap.
- Fixed issue 550
  https://jersey.dev.java.net/issues/show_bug.cgi?id=550
  When a WebApplicationException is thrown because a message body reader/writer
  cannot be found a message is included with the exception (in addition to that
  message being logged).
- Fixed issue 575
  https://jersey.dev.java.net/issues/show_bug.cgi?id=575
  Fixed regression in jersey-multipart where @FormDataParam annotated parameters
  were not being recognized resulting in deployment errors or incorrect